# production-rag-pipeline

./: .env.example  .gitignore  README.md  docker-compose-prometheus-grafana.yaml  prometheus.yml.example  pyproject.toml  test_qdrant.py
.claude/: settings.local.json
data/: eval_questions.json
src/production_rag/: cli.py  config.py
src/production_rag/agent/: README.md  entrypoint.py  knowledge.py  prompts.py  promptsV2.py  rag_agent.py  rag_agent_with_class.py
src/production_rag/agent/config/: config.yaml  config_loader.py
src/production_rag/eval/: README.md  ragas_eval.py
src/production_rag/ingestion/: README.md  pdf_converter.py  run_pipeline.py  vision_client.py
src/production_rag/ingestion_pipeline/: README.md  chunker.py  manifest.py  run_pipeline.py
src/production_rag/ingestion_pipeline/config/: config.yaml  config_loader.py
src/production_rag/ingestion_pipeline/pdf_ingestion_pipeline/: pdf_to_image_converter.py  vision_client.py
src/production_rag/integrations/: README.md  mlflow.py
src/production_rag/integrations/config/: config.yaml  config_loader.py
src/production_rag/rag_evaluation/: ragas_eval.py
src/production_rag/rag_evaluation/config/: config.yaml  config_loader.py
src/production_rag/utils/: README.md  image_encoding.py
